--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 
 <title>hello zhangwen</title>
-<link href="https://github.com/apple-touch-icon-72x72.png" sizes="72x72">
+<link href="2012" sizes="72x72">
 
 </head>
 
 <body background=2012.jpg>
 <h1 style="text-align: center;color: orangered" >保持冷静，不断向前</h1>
+
 <img src="https://camo.githubusercontent.com/e36feee0651818df92335d116f99bcf9fd1af5fe/687474703a2f2f37786b737a792e636f6d322e7a302e676c622e71696e697563646e2e636f6d2f6c6962726172792f3230313630362f4671614153766143474c58657974336e4543796b475352436d6552772e706e67"  ></img>
 </body>
 
