--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
 
 <title>hello zhangwen</title>
-<link href="2012" sizes="72x72">
+<script  src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+<script>
+show_jpg.i=-1;
+show_jpg.items=["2012.jpg","https://camo.githubusercontent.com/e36feee0651818df92335d116f99bcf9fd1af5fe/687474703a2f2f37786b737a792e636f6d322e7a302e676c622e71696e697563646e2e636f6d2f6c6962726172792f3230313630362f4671614153766143474c58657974336e4543796b475352436d6552772e706e67"]
+function  show_jpg(n) {
+    if(show_jpg.i < 0){
+        show_jpg.i=n;
+    }
+    $("#switch_jpg >img").prop("src",show_jpg.items[show_jpg.i]);
+    --show_jpg.i;
+}
 
+ setTimeout("setInterval(show_jpg,3000,1)",30);
+
+</script>
 </head>
 
-<body background=2012.jpg>
+<body src="201">
 <h1 style="text-align: center;color: orangered" >保持冷静，不断向前</h1>
-
-<img src="https://camo.githubusercontent.com/e36feee0651818df92335d116f99bcf9fd1af5fe/687474703a2f2f37786b737a792e636f6d322e7a302e676c622e71696e697563646e2e636f6d2f6c6962726172792f3230313630362f4671614153766143474c58657974336e4543796b475352436d6552772e706e67"  ></img>
+<div id="switch_jpg">
+<img  id="rock" style="width: 620px;height: 410px;" src="2012.jpg">
+</div>
 </body>
 
 </html>
