--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
 <script>
 show_jpg.i=-1;
-show_jpg.items=["2012.jpg","https://camo.githubusercontent.com/e36feee0651818df92335d116f99bcf9fd1af5fe/687474703a2f2f37786b737a792e636f6d322e7a302e676c622e71696e697563646e2e636f6d2f6c6962726172792f3230313630362f4671614153766143474c58657974336e4543796b475352436d6552772e706e67"]
+show_jpg.items=["2012.jpg","http://7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/579f80669ace2.jpg"]
 function  show_jpg(n) {
     if(show_jpg.i < 0){
         show_jpg.i=n;
