--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" />
     <input type="button" onclick="add_say()" value="发送" />
 </div>
-<iframe id="log" src="some_log/1.log"></iframe>
+<iframe id="log" src="some_log/1.log" frameborder="0" style="width: 70%;height:40%;" ></iframe>
 </body>
 
 </html>
