--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        }
        
        function add_log(){
-           var tag="<a href='some_log/1.html'></a>"
+           var tag="<a href='some_log/1.html'>1.log</a>"
            $("div#log").append(tag);
        }
        
