--- a/some_log/1.html
+++ b/some_log/1.html
@@ -1,4 +1,13 @@
-
+<html>
+<head>
+  <title>日志</title>
+</head>
+<body>
+<pre>
+<h6 style="color:red">
 今天开始着手开始试着搞搞这个，说实在的还是一件特别有意思的事情。
 但愿能坚持下去。
-
+</h6>
+</pre>
+</body>
+</html>
