--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <title>hello zhangwen</title>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script>
         show_jpg.i=-1;
         show_jpg.items=["2012.jpg","https://7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/579f80669ace2.jpg"]
