--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" />
     <input type="button" onclick="add_say()" value="发送" />
 </div>
-<div id="log" >
-    
-</div>
+<div id="log" ></div>
+<ifame src="some_log/1.html" style="width=70%"></ifame>
 </body>
 
 </html>
