--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <input type="button" onclick="add_say()" value="发送" />
 </div>
 <div id="log" ></div>
-<iframe src="some_log/1.html" style="width=70%"></iframe>
+<iframe src="some_log/1.html" style="width:70%"></iframe>
 </body>
 
 </html>
