--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 </div>
 <div id="log" ></div>
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
+<iframe src="some_log/观沧海.txt" style="width:70%"></iframe> 
 </body>
 
 </html>
