--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
        
        function add_log(path,text){
            var tag="<a href="+path+" style='text-decoration: none'>"+text+"</a>"
+           alert(tag);
            $("div#log").append(tag);
        }
        
