--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
        }
        
        function add_log(path,text){
-           var tag="<a href="+path+" style='text-decoration: none'>"+text+"</a>"
-           alert(tag);
+           var tag="<a href="+path+" style='text-decoration: none'>"+text+"</a><br/>"
            $("div#log").append(tag);
        }
        
