--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        }
        
        function add_log(path,text){
-           var tag="<a href="+path+" style='text-decoration: none'>"+text+"</a><br/>"
+           var tag="<a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><br/>"
            $("div#log").append(tag);
        }
        
