--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script>
         show_jpg.i=-1;
-        show_jpg.items=["2012.jpg","https://7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/579f80669ace2.jpg"]
+        show_jpg.items=["http://7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/5253ca6da1604.jpg","https://7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/579f80669ace2.jpg"]
         function  show_jpg(n) {
             if(show_jpg.i < 0){
                 show_jpg.i=n;
