--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </div>
 <div id="log" ></div>
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
-<iframe id="txt" src="some_log/观沧海.txt" style="width:70%;display:none" onload="get_iframe_title(this.id)" ></iframe> 
+<iframe id="txt" src="some_log/see sea.txt" style="width:70%;display:none" onload="get_iframe_title(this.id)" ></iframe> 
 </body>
 
 </html>
