--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div id="log" ></div>
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
 <iframe id="txt" src="some_log/see sea.txt" style="width:70%;display:none" onload="get_iframe_title(this.id)" ></iframe> 
-<iframe id="test" src="some_log/see sea.txt" style="width:70%;display:none"  ></iframe> 
+<!--iframe id="test" src="some_log/see sea.txt" style="width:70%;display:none"  ></iframe--> 
 </body>
 
 </html>
