--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             $("#switch_jpg > img").mouseover(function(){
                change=false;
                console.log(change);
+               console.log(show_jpg.i);
             });
             $("#switch_jpg > img").mouseleave(function(){
                change=true;
                console.log(change);
+               
             });
         }
 
