--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             $("#switch_jpg > img").mouseover(function(){
                change=false;
                console.log(change);
-               console.log(show_jpg.i);
+               console.log(show_jpg.i == 0);
+              // if(shwo_jpg.i )
             });
             $("#switch_jpg > img").mouseleave(function(){
                change=true;
