--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             $("#switch_jpg > img").mouseover(function(){
                change=false;
                console.log(change);
-               console.log(show_jpg.i == 0);
-              // if(shwo_jpg.i )
+               ifg(show_jpg.i == 0){
+                   alert("一时江湖多少事");
+               }
+            
             });
             $("#switch_jpg > img").mouseleave(function(){
                change=true;
