--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
             $("#switch_jpg > img").mouseover(function(){
                change=false;
                console.log(change);
-               ifg(show_jpg.i == 0){
+               if(show_jpg.i == 0){
                    alert("一时江湖多少事");
                }
-            
             });
             $("#switch_jpg > img").mouseleave(function(){
                change=true;
