--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <param name="play" value="auto">
         
     </object>
-    <bgsound src="http://61.158.229.139/ws.cdn.baidupcs.com/file/099416e551fb3b0aa57270262f3e2f73?bkt=p-314edf00c67c447448da8dca8de5877c&amp;xcode=6f2d422c5e3aeef75802535fb91eb27324237910852bbc09837047dfb5e85c39&amp;fid=1143201079-250528-537867520&amp;time=1470663284&amp;sign=FDTAXGERLBH-DCb740ccc5511e5e8fedcff06b081203-f6yP8D2DMwZM%2F84b%2FLlZSzHGdlg%3D&amp;to=cb&amp;fm=Nan,B,G,tt&amp;sta_dx=2&amp;sta_cs=3&amp;sta_ft=mp3&amp;sta_ct=7&amp;fm2=Nanjing,B,G,tt&amp;newver=1&amp;newfm=1&amp;secfm=1&amp;flow_ver=3&amp;pkey=1400099416e551fb3b0aa57270262f3e2f7388fbaca10000002799a4&amp;sl=76480590&amp;expires=8h&amp;rt=sh&amp;r=407385343&amp;mlogid=5123274421584883165&amp;vuk=1315056722&amp;vbdid=34162933&amp;fin=%E5%8C%85%E7%BE%8E%E5%9C%A3%20-%20%E5%B0%8F%E8%8C%89%E8%8E%89.mp3" loop="3" /> 
+    <bgsound src="http://tingge.yymp3.net/new13/gydgs/23.mp3" loop="3" /> 
     
 <h1 style="text-align: center;color: orangered" >保持冷静，不断向前</h1>
 <div id="switch_jpg">
