--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 </head>
 
 <body >
+    <iframe src="http://tingge.yymp3.net/new13/gydgs/23.mp3"></iframe>
     <object data="http://tingge.yymp3.net/new13/gydgs/23.mp3">
     <param name="play" value="auto">
         
