--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
 <body >
     
-    <object data="music/包美圣 - 小茉莉.mp3">
-    <!--param name="play" value="auto"-->
+    <object data="music/包美圣 - 小茉莉.mp3" heigth="10" width="60" >
+    <param name="autoplay" value="auto">
         
     </object>
     <!--bgsound src="http://tingge.yymp3.net/new13/gydgs/23.mp3" loop="3" /--> 
