--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         
     </object-->
     <!--bgsound src="music/包美圣 - 小茉莉.mp3" loop="3" /-->
-    <EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop="true" width="380" height="20"> 
+    <EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"> 
     
 <h1 style="text-align: center;color: orangered" >保持冷静，不断向前</h1>
 <div id="switch_jpg">
