--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </object-->
     <!--bgsound src="music/包美圣 - 小茉莉.mp3" loop="3" /-->
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
-    <audio controls="controls" autoplay="autoplay" loop=true>
+    <audio controls="controls" autoplay="autoplay" loop=true width=200>
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
     </audio>
     
