--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div id="talk">
     <p>say something to me</p>
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" onkeypress="if(event.keyCode == 13){add_say()}" />
-    <input type="button" onclick="add_say()" value="发送" />
+    <input type="button" onclick="read_mem()" value="加载留言" />
 </div>
 <div id="log" onload="read_mem()" ></div>
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
