--- a/some_log/1.html
+++ b/some_log/1.html
@@ -9,5 +9,7 @@
 但愿能坚持下去。
 </h6>
 </pre>
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
 </body>
 </html>
