--- a/some_log/1.html
+++ b/some_log/1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
   <title>是谁来自五湖四海，却囿于昼夜，厨房与爱</title>
 </head>
 <body>
