--- a/some_log/1.html
+++ b/some_log/1.html
@@ -11,6 +11,6 @@
 </h6>
 </pre>
     <div id="uyan_frame"></div>
-    <script type="text/javascript" src="//v2.uyan.cc/code/uyan.js"></script>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
 </body>
 </html>
