--- a/some_log/1.html
+++ b/some_log/1.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
+  <!--meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/-->
+  <metahttp-equiv="Content-Security-Policy"content="block-all-mixed-content"/>
   <title>是谁来自五湖四海，却囿于昼夜，厨房与爱</title>
 </head>
 <body>
