--- a/some_log/1.html
+++ b/some_log/1.html
@@ -12,7 +12,10 @@
 但愿能坚持下去。
 </h6>
 </pre>
+<!--
     <div id="uyan_frame"></div>
     <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+    -->
+<iframe src="https://github.com/hellooozhangwen/hellooozhangwen.github.io/issues/1"></iframe>    
 </body>
 </html>
