--- a/some_log/1.html
+++ b/some_log/1.html
@@ -16,6 +16,9 @@
     <div id="uyan_frame"></div>
     <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
     -->
-<iframe src="https://github.com/hellooozhangwen/hellooozhangwen.github.io/issues/1"></iframe>    
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2110017"></script>
+<!-- UY END -->
 </body>
 </html>
