--- a/some_log/1.html
+++ b/some_log/1.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="uyan_auth" content="b31e472e39" />
   <!--meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/-->
   <!--metahttp-equiv="Content-Security-Policy"content="block-all-mixed-content"/-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
