--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
         function read_issues(){
             var url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues";
             var all=$.get(url);
-            all=all["responseText"];
+            setTimeout("console.log(\"正在获取信息\")",30000);
+            string str=all["responseText"];
             //把string转为json
-            var arr=JSON.parse(all);
+            var arr=JSON.parse(str);
             var path=arr[0]["html_url"];
             var t=arr[0]["titile"];
             var b=arr[0]["body"];
