--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             var url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues";
             var all=$.get(url);
             setTimeout("console.log('正在获取信息')",30000);
-            string str=all["responseText"];
-         
+            var str=all["responseText"];
+            //string to json
             var arr=JSON.parse(str);
             var path=arr[0]["html_url"];
             var t=arr[0]["titile"];
