--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
         function read_issues(){
             var url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues";
-            $.get(url,function(all) ){
+            $.get(url,function(all){
                      setTimeout("console.log('正在获取信息')",30000);
                      console.log(all.length);
                      var str=all["responseText"];
@@ -95,7 +95,7 @@
                       var t=arr[0]["titile"];
                       var b=arr[0]["body"];
                       add_log(path,t+" : "+b);
-           }
+           });
         }
         
     </script>
