--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
             var url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues";
             $.get(url,function(all){
                      setTimeout("console.log('正在获取信息')",30000);
-                     console.log(all.length);
-                     var str=all["responseText"];
+                     //console.log(all.length);
+                     //var str=all["responseText"];
                       //string to json
-                      var arr=JSON.parse(str);
-                      var path=arr[0]["html_url"];
-                      var t=arr[0]["titile"];
-                      var b=arr[0]["body"];
+                     // var arr=JSON.parse(str);
+                      var path=all[0]["html_url"];
+                      var t=all[0]["titile"];
+                      var b=all[0]["body"];
+                      console.log(path+"/n"+t+"/n"+b+"/n");
                       add_log(path,t+" : "+b);
             });
         }
