--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
         }
         
         function read_issues(){
+            setTimeout("console.log('正在获取信息')",50000);
             var url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues";
             $.get(url,function(all){
-                     setTimeout("console.log('正在获取信息')",30000);
+                     //setTimeout("console.log('正在获取信息')",30000);
                      //console.log(all.length);
                      //var str=all["responseText"];
                       //string to json
                      // var arr=JSON.parse(str);
                       var path=all[0]["html_url"];
-                      var t=all[0]["titile"];
+                      var t=all[0]["title"];
                       var b=all[0]["body"];
                       console.log(path+"/n"+t+"/n"+b+"/n");
                       add_log(path,t+" : "+b);
