--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                       console.log(path+"/n"+t+"/n"+b+"/n");
                       if(all[0]["comments"]){
                           $.get(all[0]["comments_url"],function(data){
-                              console.log(date[0]["body"]);
-                              console.log(date[1]["body"]);
+                              console.log(data[0]["body"]);
+                              console.log(data[1]["body"]);
                           })
                       }
                       add_log(path,t+" : "+b);
