--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                       var t=all[0]["title"];
                       var b=all[0]["body"];
                       console.log(path+"/n"+t+"/n"+b+"/n");
+                      //获取留言
                       if(all[0]["comments"]){
                           $.get(all[0]["comments_url"],function(data){
                               console.log(data[0]["body"]);
