--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             var url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues";
             $.get(url,function(all){
                      //setTimeout("console.log('正在获取信息')",30000);
-                     //console.log(all.length);
+                      console.log(all.length);
                      //var str=all["responseText"];
                       //string to json
                      // var arr=JSON.parse(str);
