--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        }
        
        function add_log(path,text){
-           var tag="<a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><br/>"
+           var tag="<hr/><hr/><a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><br/><hr/><hr/>"
            $("div#log").append(tag);
        }
        
