--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
        }
        
        function add_log(path,text){
-           var tag="<hr/><hr/><a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><br/><hr/><hr/>"
+           var tag="<br/><hr/><a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><hr/>"
            $("div#log").append(tag);
        }
        
@@ -105,7 +105,7 @@
                               console.log(data[1]["body"]);
                           })
                       }
-                      add_log(path,t+" : "+b);
+                      add_log(path,t);
                 }      
             });
         }
