--- a/index.html
+++ b/index.html
@@ -117,11 +117,25 @@
                    // alert("ESC");
                     $("audio#mp3").eq(0).toggle(); //css("display","none"); 
                     $("audio#mp3")[0].pause();
+                    show("用ESC键隐藏了音乐'\n'用ESC键显示音乐");
                     break;
                     //case 96:
                    //  alert("ESC");
                 }
         });
+        
+        function show(msg){
+                //  if(!$("#show").length) {
+                msg="<h1 style='color: #0000cc;text-align: center;position: absolute;top: 45%;left: 30%' >"+msg+"</h1>";
+                var tag = '<div id=show style="height: 100%;width: 100%;text-align: center;background-color: orangered;position: fixed;top: 0%;left: 0%;display: none;opacity: .7 " >' + msg + "</div>";
+                $('body').append(tag);
+                // }
+               $("#show").toggle();  //显示id为show的标签内容
+                setTimeout("$('#show').toggle()",5000);
+                //5秒后再隐藏
+                 setTimeout('$("#show").remove()',5500);
+                 //5.5秒后移除
+        }
         
     </script>
 </head>
