--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                    // alert("ESC");
                     $("audio#mp3").eq(0).toggle(); //css("display","none"); 
                     $("audio#mp3")[0].pause();
-                    show("用ESC键隐藏了音乐'\n'用ESC键显示音乐");
+                    show("用ESC键隐藏了音乐<p>用ESC键显示音乐</p>");
                     break;
                     //case 96:
                    //  alert("ESC");
