--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
        }
        
        function add_log(path,text){
+           var r=Math.random()*255;
+           var g=Math.random()*255;
+           var b=Math.random()*255;
+           var rgb="rgb("+r+","+g+","+b+")";
            var tag="<br/><hr style='height:3px;border:none;border-top:3px double red' /><a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><hr/>"
            $("div#log").append(tag);
        }
