--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 
     <title>hello zhangwen</title>
+    <style>
+        audio#mp3{position:fixed;top:0;left:0;width:900px;opacity:.3 }
+    </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script>
