--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <title>hello zhangwen</title>
     <style>
-       audio#mp3{opacity:.3;position:fixed;top:95%;left:60%;}
+       audio#mp3{opacity:.3;position:fixed;top:95%;left:75%;}
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -161,7 +161,7 @@
     </object-->
     <!--bgsound src="music/包美圣 - 小茉莉.mp3" loop="3" /-->
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
-    <audio id="mp3" controls="controls" autoplay="autoplay" loop=true style="width:70%;heigth:1%" >
+    <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
     </audio>
     
