--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>hello zhangwen</title>
     <style>
        audio#mp3{opacity:.3;position:fixed;top:95%;left:75%;}
+       div#log a{background-color:blue;,opacity:.4;}
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
