--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>hello zhangwen</title>
     <style>
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;}
-       div#log a,p {background: linear-gradient(to right,#ffffff,blue);width:20%; }
+       div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
