--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                    $("audio#mp3").eq(0).toggle(); //css("display","none"); 
                    if(play){
                        $("audio#mp3")[0].pause();
-                       show("用ESC键显示音乐");
+                       show("可以用ESC键显示音乐");
                     }else{
                         $("audio#mp3")[0].play();
-                        show("用ESC键隐藏了音乐");
+                        show("可以用ESC键隐藏音乐");
                     }
                     play=!play;
                     break;
