--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
     <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
+        <p style="display:none">可以用ESC键控制</p>
     </audio>
     
 <h1 style="text-align: center;color: orangered;display:none" >保持冷静，不断向前</h1>
