--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 $('body').append(tag);
                 // }
                $("#show").toggle();  //显示id为show的标签内容
-                setTimeout("$('#show').toggle()",5000);
-                //5秒后再隐藏
-                 setTimeout('$("#show").remove()',5500);
-                 //5.5秒后移除
+                setTimeout("$('#show').toggle()",3000);
+                //3秒后再隐藏
+                 setTimeout('$("#show").remove()',3500);
+                 //3.5秒后移除
         }
         
     </script>
@@ -165,7 +165,7 @@
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
     <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
-        <p style="display:none">可以用ESC键控制</p>
+        <span style="display:none">可以用ESC键控制</span>
     </audio>
     
 <h1 style="text-align: center;color: orangered;display:none" >保持冷静，不断向前</h1>
