--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>hello zhangwen</title>
     <style>
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;}
+       audio#mp3 ~span[id $= help]{ display:none;position:fixed}
        div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
@@ -165,8 +166,8 @@
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
     <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
-        <span style="display:none">可以用ESC键控制</span>
     </audio>
+    <span id="mp3_help">可以用ESC键控制</span>
     
 <h1 style="text-align: center;color: orangered;display:none" >保持冷静，不断向前</h1>
 <div id="switch_jpg">
