--- a/some_log/1.html
+++ b/some_log/1.html
@@ -24,7 +24,7 @@
 
 <section id="comments">
    <!-- 多说评论框 start -->
-<div id="ds-thread" class="ds-thread" data-thread-key="<%= post.path %>" data-title="<%= post.title %>" data-url="<%= post.permalink %>"></div>
+<div id="ds-thread" class="ds-thread" data-thread-key="log1" data-title="是谁来自五湖四海，却囿于昼夜，厨房与爱" data-url="https://hellooozhangwen.github.io/some_log/1.html"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
