--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                console.log(change);
                if(show_jpg.i == 0){
                    //alert("一时江湖多少事");
-                   console.log("一时江湖多少事);
+                   console.log("一时江湖多少事");
                }
             });
             $("#switch_jpg > img").mouseleave(function(){
