--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
            var g=Math.random()*255;
            var b=Math.random()*255;
            var rgb="rgb("+r+","+g+","+b+")";
-           var tag="<br/><hr style='height:3px;border:none;border-top:3px double red' /><a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><hr/>"
+           var tag="<br/><!--hr style='height:3px;border:none;border-top:3px double red' /--><a href="+path+" style='text-decoration: none'>日志：  "+text+"</a><hr/>"
            $("div#log").append(tag);
        }
        
