--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;}
        audio#mp3 ~span[id $= help] {display:none }
        audio#mp3:hover ~span[id $= help]{ display:block;position:absolute;position:fixed;top:95%;left:55%;color:orangered;font-size:150%}
-       div#log a,div#log a p {background-color: linear-gradient(to right,#ffffff,blue);width:20%; }
+       div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -117,7 +117,7 @@
                               console.log(data[1]["body"]);
                           })
                       }
-                      add_log(path,t+"<p>"+ctime+"</p>");
+                      add_log(path,t+"<br/>"+ctime);
                 }      
             });
         }
