--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                               console.log(data[1]["body"]);
                           })
                       }
-                      add_log(path,t+"<br/>"+ctime);
+                      add_log(path,t+" &nbsp&nbsp&nbsp&nbsp&gt&gt&gt  "+ctime);
                 }      
             });
         }
