--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            var g=parseInt(Math.random()*255);
            var b=255;
            var a=parseInt(Math.random()*1);
-           var rgb=" background: linear-gradient(to right,#ffffff,rgba("+r+","+g+","+b+","+a+")) ";
+           var rgb=" background: linear-gradient(to right,#ffffff,rgb("+r+","+g+","+b+")) ";
            console.log(rgb);
            var tag="<br/><!--hr style='height:3px;border:none;border-top:3px double red' /--><a href="+path+" style='text-decoration: none;"+rgb+"' target='view_window' >日志：  "+text+"</a><hr/>"
            $("div#log").append(tag);
